# ft_surface

./: .gitignore  README.en.md  README.md  build_rpm.sh  ft_surface_wrapper.spec
ft_surface_wrapper/: CMakeLists.txt  README.en.md  README.md  ft_surface_wrapper.pc
ft_surface_wrapper/include/: buffer_handle.h  display_type.h  external_window.h  ftsurface_log.h  native_window_wrapper.h  window.h
ft_surface_wrapper/src/: native_window_wrapper.c
ft_surface_wrapper/test/: test.c
